--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scenes\ChangeScene.cs" />
     <Compile Include="Assets\Scenes\gamesystem.cs" />
+    <Compile Include="Assets\Scenes\UImanager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
