--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scenes\PanelSerect.cs" />
     <Compile Include="Assets\Scenes\features.cs" />
     <Compile Include="Assets\Scenes\CM.cs" />
+    <Compile Include="Assets\Scenes\prediction.cs" />
     <Compile Include="Assets\Scenes\CHam.cs" />
     <Compile Include="Assets\Scenes\Scrollbar.cs" />
     <Compile Include="Assets\Scenes\SHam.cs" />
@@ -76,8 +77,7 @@
     <Compile Include="Assets\Scenes\gamesystem.cs" />
     <Compile Include="Assets\Scenes\Ham.cs" />
     <Compile Include="Assets\Scenes\Product.cs" />
-    <Compile Include="Assets\Scenes\Features1.cs" />
-    <Compile Include="Assets\Scenes\prediction.cs" />
+    <Compile Include="Assets\Scenes\action.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
